deployment.tf
# provider "kubernetes" {
#   host                   = data.aws_eks_cluster.cluster.endpoint
#   cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
#   token                  = data.aws_eks_cluster_auth.cluster.token
# }
# resource "kubernetes_namespace" "test" {
#   metadata {
#     name = "nginx"
#   }
# }
# resource "kubernetes_deployment" "test" {
#   metadata {
#     name        = "nginx"
#     namespace   = kubernetes_namespace.test.metadata.0.name
#     annotations = { "service.beta.kubernetes.io/aws-load-balancer-type" : "nlb-ip" }
#   }
#   spec {
#     replicas = 2
#     selector {
#       match_labels = {
#         app = "MyTestApp"
#       }
#     }
#     template {
#       metadata {
#         labels = {
#           app = "MyTestApp"
#         }
#       }
#       spec {
#         container {
#           image = "nginx"
#           name  = "nginx-container"
#           port {
#             container_port = 80
#           }
#         }
#       }
#     }
#   }
# }
# resource "kubernetes_service" "test" {
#   metadata {
#     name      = "nginx"
#     namespace = kubernetes_namespace.test.metadata.0.name
#   }
#   spec {
#     selector = {
    
#       app = kubernetes_deployment.test.spec.0.template.0.metadata.0.labels.app
#     }
#     type = "LoadBalancer"
#     port {
#       # node_port   = 30201
#       port        = 80
#       target_port = 80
#     }
#   }
# }
